--- a/Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.AppServer.Services.AppServerDb/MarcelJoachimKloubert.AppServer.Services.AppServerDb.csproj
+++ b/Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.AppServer.Services.AppServerDb/MarcelJoachimKloubert.AppServer.Services.AppServerDb.csproj
@@ -36,9 +36,13 @@
     <AssemblyOriginatorKeyFile>MarcelJoachimKloubert.AppServer.Services.AppServerDb.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="EntityFramework, Version=4.4.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+    <Reference Include="Iesi.Collections, Version=1.0.1.0, Culture=neutral, PublicKeyToken=aa95f207798dfdb4, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>.\EntityFramework.dll</HintPath>
+      <HintPath>.\Iesi.Collections.dll</HintPath>
+    </Reference>
+    <Reference Include="NHibernate, Version=3.3.1.4000, Culture=neutral, PublicKeyToken=aa95f207798dfdb4, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>.\NHibernate.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.Composition" />
@@ -51,15 +55,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DbContextAppServerDatabase.Classes.cs">
-      <DependentUpon>DbContextAppServerDatabase.cs</DependentUpon>
-    </Compile>
+    <Compile Include="AppServerDataConnection.cs" />
+    <Compile Include="AppServerEntityMapper.cs" />
+    <Compile Include="AppServerEntityRepository.cs" />
+    <Compile Include="NHAppServerDatabase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="DbContextAppServerDatabase.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="EntityFramework.dll" />
-    <None Include="EntityFramework.xml" />
     <EmbeddedResource Include="LICENSE" />
     <None Include="MarcelJoachimKloubert.AppServer.Services.AppServerDb.snk" />
   </ItemGroup>
@@ -84,6 +86,12 @@
       <Project>{9f006f97-a3b2-48e5-ba64-7f2df3c59c82}</Project>
       <Name>MarcelJoachimKloubert.ApplicationServer</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Iesi.Collections.dll" />
+    <None Include="Iesi.Collections.xml" />
+    <None Include="NHibernate.dll" />
+    <None Include="NHibernate.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
