--- a/Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.ApplicationServer.DataLayer/MarcelJoachimKloubert.ApplicationServer.DataLayer.csproj
+++ b/Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.ApplicationServer.DataLayer/MarcelJoachimKloubert.ApplicationServer.DataLayer.csproj
@@ -46,7 +46,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AppServerDatabaseBase.cs" />
+    <Compile Include="Entities\AppServerEntityRepositoryBase.cs" />
     <Compile Include="IAppServerDatabase.cs" />
+    <Compile Include="IAppServerDataConnection.cs" />
+    <Compile Include="Entities\IAppServerEntityRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -67,6 +70,7 @@
       <Name>MarcelJoachimKloubert.ApplicationServer.SDK</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
