--- a/MarcelJoachimKloubert.CLRToolbox.XNA/MarcelJoachimKloubert.CLRToolbox.XNA.40/MarcelJoachimKloubert.CLRToolbox.XNA.40.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.XNA/MarcelJoachimKloubert.CLRToolbox.XNA.40/MarcelJoachimKloubert.CLRToolbox.XNA.40.csproj
@@ -132,6 +132,9 @@
     <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Data\DatabaseBase.cs">
       <Link>Data\DatabaseBase.cs</Link>
     </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Data\DataConnectionBase.cs">
+      <Link>Data\DataConnectionBase.cs</Link>
+    </Compile>
     <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Data\Entities\EntityBase.cs">
       <Link>Data\Entities\EntityBase.cs</Link>
     </Compile>
@@ -142,6 +145,9 @@
     <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Data\Entities\EntityBase.PropertyChanging.cs">
       <Link>Data\Entities\EntityBase.PropertyChanging.cs</Link>
       <DependentUpon>EntityBase.cs</DependentUpon>
+    </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Data\Entities\EntityRepositoryBase.cs">
+      <Link>Data\Entities\EntityRepositoryBase.cs</Link>
     </Compile>
     <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Data\Entities\IEntity.cs">
       <Link>Data\Entities\IEntity.cs</Link>
@@ -154,6 +160,9 @@
       <Link>Data\Entities\IEntity.PropertyChanging.cs</Link>
       <DependentUpon>IEntity.cs</DependentUpon>
     </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Data\Entities\IEntityRepository.cs">
+      <Link>Data\Entities\IEntityRepository.cs</Link>
+    </Compile>
     <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Data\GlobalConverter.cs">
       <Link>Data\GlobalConverter.cs</Link>
     </Compile>
@@ -165,6 +174,9 @@
     </Compile>
     <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Data\IDatabase.cs">
       <Link>Data\IDatabase.cs</Link>
+    </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Data\IDataConnection.cs">
+      <Link>Data\IDataConnection.cs</Link>
     </Compile>
     <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Data\TMColumnAttribute.cs">
       <Link>Data\TMColumnAttribute.cs</Link>
@@ -357,6 +369,17 @@
     <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\CollectionHelper.ToEnumerableSafe.cs">
       <Link>Helpers\CollectionHelper.ToEnumerableSafe.cs</Link>
       <DependentUpon>CollectionHelper.cs</DependentUpon>
+    </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\EntityHelper.cs">
+      <Link>Helpers\EntityHelper.cs</Link>
+    </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\EntityHelper.GetColumns.cs">
+      <Link>Helpers\EntityHelper.GetColumns.cs</Link>
+      <DependentUpon>EntityHelper.cs</DependentUpon>
+    </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\EntityHelper.TryGetTableNameAndSchema.cs">
+      <Link>Helpers\EntityHelper.TryGetTableNameAndSchema.cs</Link>
+      <DependentUpon>EntityHelper.cs</DependentUpon>
     </Compile>
     <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\EnumHelper.cs">
       <Link>Helpers\EnumHelper.cs</Link>
