projects, .NET 3.0 and .NET 4.5.1
- ADD: GitThemAll WinForms project
- DEL: support for .NET 3.0 and .NET 4.5.1

--- a/.gitignore
+++ b/.gitignore
@@ -131,3 +131,18 @@
 
 /Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.AppServer.Modules.RemoteComm/App.Config
 /Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.ApplicationServer.TestHost/app.config
+/Projects/MarcelJoachimKloubert.GitThemAll/MarcelJoachimKloubert.GitThemAll/obj
+/Projects/MarcelJoachimKloubert.GitThemAll/MarcelJoachimKloubert.GitThemAll/bin
+
+/Projects/MarcelJoachimKloubert.GitThemAll/packages
+/Projects/MarcelJoachimKloubert.GitThemAll/MarcelJoachimKloubert.GitThemAll.v11.suo
+
+/MarcelJoachimKloubert.CLRToolbox.20.WinForms/obj
+/MarcelJoachimKloubert.CLRToolbox.20.WinForms/bin
+/MarcelJoachimKloubert.CLRToolbox.35.WinForms/obj
+/MarcelJoachimKloubert.CLRToolbox.35.WinForms/bin
+
+/MarcelJoachimKloubert.CLRToolbox.40.WinForms/obj
+/MarcelJoachimKloubert.CLRToolbox.40.WinForms/bin
+/MarcelJoachimKloubert.CLRToolbox.45.WinForms/obj
+/MarcelJoachimKloubert.CLRToolbox.45.WinForms/bin
