--- a/MarcelJoachimKloubert.CLRToolbox.35.WinForms/MarcelJoachimKloubert.CLRToolbox.35.WinForms.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.35.WinForms/MarcelJoachimKloubert.CLRToolbox.35.WinForms.csproj
@@ -4,16 +4,13 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{455D157B-0FF7-4C06-AA9A-41CA0E8772D7}</ProjectGuid>
-    <OutputType>library</OutputType>
+    <ProjectGuid>{20FCE78B-ACEC-43BE-B3B9-B14B912EDAA8}</ProjectGuid>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MarcelJoachimKloubert.CLRToolbox.Windows</RootNamespace>
-    <AssemblyName>MarcelJoachimKloubert.CLRToolbox.WPF</AssemblyName>
+    <RootNamespace>MarcelJoachimKloubert.CLRToolbox.WinForms</RootNamespace>
+    <AssemblyName>MarcelJoachimKloubert.CLRToolbox.WinForms</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
-    <WarningLevel>4</WarningLevel>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -23,8 +20,6 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-    <DocumentationFile>bin\Debug\MarcelJoachimKloubert.CLRToolbox.WPF.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -38,46 +33,24 @@
     <SignAssembly>true</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
-    <AssemblyOriginatorKeyFile>MarcelJoachimKloubert.CLRToolbox.WPF.snk</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>..\MarcelJoachimKloubert.CLRToolbox.20.WinForms\MarcelJoachimKloubert.CLRToolbox.WinForms.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="System.Data" />
+    <Reference Include="System.Core" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
-    <Reference Include="WindowsBase" />
-    <Reference Include="PresentationCore" />
-    <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Data\CommandValueConverterBase.cs" />
-    <Compile Include="Data\Impl\CommandValueConverter.cs" />
-    <Compile Include="Data\Impl\DelegateToCommandValueConverter.cs" />
-    <Compile Include="Data\ValueConverterBase.cs" />
-    <Compile Include="Data\ValueConverterBase.Interface.cs" />
-    <Compile Include="Input\SimpleCommand.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
-    <Compile Include="Properties\Settings.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Settings.settings</DependentUpon>
-      <DesignTimeSharedInput>True</DesignTimeSharedInput>
-    </Compile>
-    <EmbeddedResource Include="Properties\Resources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
-    <None Include="MarcelJoachimKloubert.CLRToolbox.WPF.snk" />
-    <None Include="Properties\Settings.settings">
-      <Generator>SettingsSingleFileGenerator</Generator>
-      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Service Include="{94E38DFF-614B-4cbd-B67C-F211BB35CE8B}" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\MarcelJoachimKloubert.CLRToolbox.20.WinForms\MarcelJoachimKloubert.CLRToolbox.WinForms.snk">
+      <Link>MarcelJoachimKloubert.CLRToolbox.WinForms.snk</Link>
     </None>
-    <AppDesigner Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MarcelJoachimKloubert.CLRToolbox.35\MarcelJoachimKloubert.CLRToolbox.35.csproj">
