--- a/Projects/MarcelJoachimKloubert.GitThemAll/MarcelJoachimKloubert.GitThemAll/MarcelJoachimKloubert.GitThemAll.csproj
+++ b/Projects/MarcelJoachimKloubert.GitThemAll/MarcelJoachimKloubert.GitThemAll/MarcelJoachimKloubert.GitThemAll.csproj
@@ -53,6 +53,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Forms\CredentialForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\CredentialForm.Designer.cs">
+      <DependentUpon>CredentialForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -61,6 +67,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Forms\CredentialForm.resx">
+      <DependentUpon>CredentialForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
