imported WpfAuctionDesigner GitHub repository as project

--- a/.gitignore
+++ b/.gitignore
@@ -146,3 +146,5 @@
 /MarcelJoachimKloubert.CLRToolbox.40.WinForms/bin
 /MarcelJoachimKloubert.CLRToolbox.45.WinForms/obj
 /MarcelJoachimKloubert.CLRToolbox.45.WinForms/bin
+/Projects/MarcelJoachimKloubert.WpfAuctionDesigner/MarcelJoachimKloubert.WpfAuctionDesigner/obj
+/Projects/MarcelJoachimKloubert.WpfAuctionDesigner/MarcelJoachimKloubert.WpfAuctionDesigner/bin
