--- a/.gitignore
+++ b/.gitignore
@@ -148,3 +148,4 @@
 /MarcelJoachimKloubert.CLRToolbox.45.WinForms/bin
 /Projects/MarcelJoachimKloubert.WpfAuctionDesigner/MarcelJoachimKloubert.WpfAuctionDesigner/obj
 /Projects/MarcelJoachimKloubert.WpfAuctionDesigner/MarcelJoachimKloubert.WpfAuctionDesigner/bin
+/Projects/MarcelJoachimKloubert.WpfAuctionDesigner/MarcelJoachimKloubert.WpfAuctionDesigner.v11.suo
