--- a/.gitignore
+++ b/.gitignore
@@ -149,3 +149,4 @@
 /Projects/MarcelJoachimKloubert.WpfAuctionDesigner/MarcelJoachimKloubert.WpfAuctionDesigner/obj
 /Projects/MarcelJoachimKloubert.WpfAuctionDesigner/MarcelJoachimKloubert.WpfAuctionDesigner/bin
 /Projects/MarcelJoachimKloubert.WpfAuctionDesigner/MarcelJoachimKloubert.WpfAuctionDesigner.v11.suo
+/UpgradeLog.htm
