projects, app server, improvements, cleanups and HTTP
- ADD: file syncer win forms project
- ADD: SetupForJson(), WriteJavaScript() and WriteJson() methods for
IHttpResponse interface
- ADD: http modules are resource locators now
- CHG: code cleanups
- ADD: DebuggerStepThrough attributes
- ADD: automatic loading/emedding of javascript code for modules
- UPD: design of application server web interface

--- a/.gitignore
+++ b/.gitignore
@@ -149,3 +149,11 @@
 /Projects/MarcelJoachimKloubert.WpfAuctionDesigner/MarcelJoachimKloubert.WpfAuctionDesigner/obj
 /Projects/MarcelJoachimKloubert.WpfAuctionDesigner/MarcelJoachimKloubert.WpfAuctionDesigner/bin
 /Projects/MarcelJoachimKloubert.WpfAuctionDesigner/MarcelJoachimKloubert.WpfAuctionDesigner.v11.suo
+
+/Projects/MarcelJoachimKloubert.FileSyncer/packages
+/Projects/MarcelJoachimKloubert.FileSyncer/MarcelJoachimKloubert.FileSyncer.v11.suo
+
+/Projects/MarcelJoachimKloubert.FileSyncer/MarcelJoachimKloubert.FileSyncer/obj
+/Projects/MarcelJoachimKloubert.FileSyncer/MarcelJoachimKloubert.FileSyncer/bin
+
+/Projects/MarcelJoachimKloubert.FileSyncer/MarcelJoachimKloubert.FileSyncer/App.config
