first running beta of file syncer tool

--- a/.gitignore
+++ b/.gitignore
@@ -157,3 +157,5 @@
 /Projects/MarcelJoachimKloubert.FileSyncer/MarcelJoachimKloubert.FileSyncer/bin
 
 /Projects/MarcelJoachimKloubert.FileSyncer/MarcelJoachimKloubert.FileSyncer/App.config
+/Projects/MarcelJoachimKloubert.FileSyncer/MarcelJoachimKloubert.FileSyncer.WPF/obj
+/Projects/MarcelJoachimKloubert.FileSyncer/MarcelJoachimKloubert.FileSyncer.WPF/bin
