--- a/MarcelJoachimKloubert.CLRToolbox.35.WPF/MarcelJoachimKloubert.CLRToolbox.35.WPF.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.35.WPF/MarcelJoachimKloubert.CLRToolbox.35.WPF.csproj
@@ -49,6 +49,7 @@
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Collections\ObjectModel\SynchronizedObservableCollection.cs" />
     <Compile Include="Data\CommandValueConverterBase.cs" />
     <Compile Include="Data\Impl\CommandValueConverter.cs" />
     <Compile Include="Data\Impl\DelegateToCommandValueConverter.cs" />
