--- a/MarcelJoachimKloubert.CLRToolbox.45/MarcelJoachimKloubert.CLRToolbox.45.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.45/MarcelJoachimKloubert.CLRToolbox.45.csproj
@@ -912,6 +912,9 @@
       <Link>TMObject.Fields.cs</Link>
       <DependentUpon>TMObject.cs</DependentUpon>
     </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.35.WPF\Collections\ObjectModel\SynchronizedObservableCollection.cs">
+      <Link>Collections\ObjectModel\SynchronizedObservableCollection.cs</Link>
+    </Compile>
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.35\ComponentModel\NotificationObjectBase.PropertyChange35.cs">
       <Link>ComponentModel\NotificationObjectBase.PropertyChange35.cs</Link>
       <DependentUpon>NotificationObjectBase.cs</DependentUpon>
