--- a/Projects/MarcelJoachimKloubert.MusicSorter/MarcelJoachimKloubert.MusicSorter/MarcelJoachimKloubert.MusicSorter.csproj
+++ b/Projects/MarcelJoachimKloubert.MusicSorter/MarcelJoachimKloubert.MusicSorter/MarcelJoachimKloubert.MusicSorter.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Forms\MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Helpers\VlcHelper.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Forms\MainForm.resx">
@@ -88,9 +89,6 @@
     <None Include="vlc\plugins\plugins.dat">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\MarcelJoachimKloubert.CLRToolbox.45.WinForms\MarcelJoachimKloubert.CLRToolbox.45.WinForms.csproj">
