--- a/MarcelJoachimKloubert.CLRToolbox.20.WinForms/MarcelJoachimKloubert.CLRToolbox.20.WinForms.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.20.WinForms/MarcelJoachimKloubert.CLRToolbox.20.WinForms.csproj
@@ -46,6 +46,9 @@
     <Service Include="{94E38DFF-614B-4cbd-B67C-F211BB35CE8B}" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="..\LICENSE">
+      <Link>LICENSE</Link>
+    </EmbeddedResource>
     <None Include="MarcelJoachimKloubert.CLRToolbox.WinForms.snk" />
   </ItemGroup>
   <ItemGroup>
