- ADD: InvokeSafe() extension / helper methods for WinForms controls

--- a/MarcelJoachimKloubert.CLRToolbox.35.WinForms/MarcelJoachimKloubert.CLRToolbox.35.WinForms.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.35.WinForms/MarcelJoachimKloubert.CLRToolbox.35.WinForms.csproj
@@ -20,6 +20,8 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <DocumentationFile>bin\Debug\MarcelJoachimKloubert.CLRToolbox.WinForms.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -44,6 +46,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20.WinForms\Helpers\WinFormsHelper.cs">
+      <Link>Helpers\WinFormsHelper.cs</Link>
+    </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20.WinForms\Helpers\WinFormsHelper.InvokeSafe.cs">
+      <Link>Helpers\WinFormsHelper.InvokeSafe.cs</Link>
+      <DependentUpon>WinFormsHelper.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Extensions\Controls.cs" />
+    <Compile Include="Extensions\Controls.InvokeSafe.cs">
+      <DependentUpon>Controls.cs</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Service Include="{94E38DFF-614B-4cbd-B67C-F211BB35CE8B}" />
   </ItemGroup>
