--- a/MarcelJoachimKloubert.CLRToolbox.45.WinForms/MarcelJoachimKloubert.CLRToolbox.45.WinForms.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.45.WinForms/MarcelJoachimKloubert.CLRToolbox.45.WinForms.csproj
@@ -20,6 +20,8 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Debug\MarcelJoachimKloubert.CLRToolbox.WinForms.XML</DocumentationFile>
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -45,6 +47,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\marceljoachimkloubert.clrtoolbox.20.winforms\helpers\WinFormsHelper.cs">
+      <Link>Helpers\WinFormsHelper.cs</Link>
+    </Compile>
+    <Compile Include="..\marceljoachimkloubert.clrtoolbox.20.winforms\helpers\WinFormsHelper.InvokeSafe.cs">
+      <Link>Helpers\WinFormsHelper.InvokeSafe.cs</Link>
+      <DependentUpon>WinFormsHelper.cs</DependentUpon>
+    </Compile>
+    <Compile Include="..\marceljoachimkloubert.clrtoolbox.35.winforms\extensions\Controls.cs">
+      <Link>Extensions\Controls.cs</Link>
+    </Compile>
+    <Compile Include="..\marceljoachimkloubert.clrtoolbox.35.winforms\extensions\Controls.InvokeSafe.cs">
+      <Link>Extensions\Controls.InvokeSafe.cs</Link>
+      <DependentUpon>Controls.cs</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Service Include="{94E38DFF-614B-4cbd-B67C-F211BB35CE8B}" />
   </ItemGroup>
