--- a/MarcelJoachimKloubert.CLRToolbox.35.WPF/MarcelJoachimKloubert.CLRToolbox.35.WPF.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.35.WPF/MarcelJoachimKloubert.CLRToolbox.35.WPF.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Data\Impl\DelegateToCommandValueConverter.cs" />
     <Compile Include="Data\ValueConverterBase.cs" />
     <Compile Include="Data\ValueConverterBase.Interface.cs" />
+    <Compile Include="Extensions\ClrToolboxWpfExtensionMethods.cs" />
     <Compile Include="Input\SimpleCommand.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
