--- a/MarcelJoachimKloubert.CLRToolbox.35.WinForms/MarcelJoachimKloubert.CLRToolbox.35.WinForms.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.35.WinForms/MarcelJoachimKloubert.CLRToolbox.35.WinForms.csproj
@@ -53,6 +53,7 @@
       <Link>Helpers\WinFormsHelper.InvokeSafe.cs</Link>
       <DependentUpon>WinFormsHelper.cs</DependentUpon>
     </Compile>
+    <Compile Include="Extensions\ClrToolboxWinFormsExtensionMethods.cs" />
     <Compile Include="Extensions\Controls.cs" />
     <Compile Include="Extensions\Controls.InvokeSafe.cs">
       <DependentUpon>Controls.cs</DependentUpon>
