--- a/MarcelJoachimKloubert.CLRToolbox.40.WinForms/MarcelJoachimKloubert.CLRToolbox.40.WinForms.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.40.WinForms/MarcelJoachimKloubert.CLRToolbox.40.WinForms.csproj
@@ -54,6 +54,9 @@
       <Link>Helpers\WinFormsHelper.InvokeSafe.cs</Link>
       <DependentUpon>WinFormsHelper.cs</DependentUpon>
     </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.35.WinForms\Extensions\ClrToolboxWinFormsExtensionMethods.cs">
+      <Link>Extensions\ClrToolboxWinFormsExtensionMethods.cs</Link>
+    </Compile>
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.35.WinForms\Extensions\Controls.cs">
       <Link>Extensions\Controls.cs</Link>
     </Compile>
@@ -78,6 +81,7 @@
       <Name>MarcelJoachimKloubert.CLRToolbox.40</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
