data/content, WPF and fixes
- ADD: attachted property HTML for WebBrowser controls
- ADD: document framework
- ADD: Encoding propety to IContentProvider interface
- FIX: added missing WPF classes for other target frameworks
- FIX: removed obsolete external references to JSON.NET

--- a/MarcelJoachimKloubert.CLRToolbox.20/MarcelJoachimKloubert.CLRToolbox.20.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.20/MarcelJoachimKloubert.CLRToolbox.20.csproj
@@ -80,9 +80,12 @@
       <DependentUpon>CommonConverter.cs</DependentUpon>
     </Compile>
     <Compile Include="Data\CommonConverter.cs" />
+    <Compile Include="Data\ContentProviderBase.cs" />
     <Compile Include="Data\ConverterBase.cs" />
     <Compile Include="Data\DatabaseBase.cs" />
     <Compile Include="Data\DataConnectionBase.cs" />
+    <Compile Include="Data\Documents\DocumentBase.cs" />
+    <Compile Include="Data\Documents\IDocument.cs" />
     <Compile Include="Data\Entities\EntityBase.cs" />
     <Compile Include="Data\Entities\EntityBase.dotNet.cs">
       <DependentUpon>EntityBase.cs</DependentUpon>
