--- a/MarcelJoachimKloubert.CLRToolbox.XNA/MarcelJoachimKloubert.CLRToolbox.XNA.40/MarcelJoachimKloubert.CLRToolbox.XNA.40.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.XNA/MarcelJoachimKloubert.CLRToolbox.XNA.40/MarcelJoachimKloubert.CLRToolbox.XNA.40.csproj
@@ -127,6 +127,9 @@
       <Link>Data\CommonConverter.ParseInputValueForChangeType.cs</Link>
       <DependentUpon>CommonConverter.cs</DependentUpon>
     </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Data\ContentProviderBase.cs">
+      <Link>Data\ContentProviderBase.cs</Link>
+    </Compile>
     <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Data\ConverterBase.cs">
       <Link>Data\ConverterBase.cs</Link>
     </Compile>
@@ -135,6 +138,12 @@
     </Compile>
     <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Data\DataConnectionBase.cs">
       <Link>Data\DataConnectionBase.cs</Link>
+    </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Data\Documents\DocumentBase.cs">
+      <Link>Data\Documents\DocumentBase.cs</Link>
+    </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Data\Documents\IDocument.cs">
+      <Link>Data\Documents\IDocument.cs</Link>
     </Compile>
     <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Data\Entities\EntityBase.cs">
       <Link>Data\Entities\EntityBase.cs</Link>
