--- a/MarcelJoachimKloubert.CLRToolbox.45.WPF/MarcelJoachimKloubert.CLRToolbox.45.WPF.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.45.WPF/MarcelJoachimKloubert.CLRToolbox.45.WPF.csproj
@@ -52,6 +52,12 @@
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\marceljoachimkloubert.clrtoolbox.35.wpf\behaviours\WebBrowser.cs">
+      <Link>Behaviours\WebBrowser.cs</Link>
+    </Compile>
+    <Compile Include="..\marceljoachimkloubert.clrtoolbox.35.wpf\collections\objectmodel\SynchronizedObservableCollection.cs">
+      <Link>Collections\ObjectModel\SynchronizedObservableCollection.cs</Link>
+    </Compile>
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.35.WPF\Data\CommandValueConverterBase.cs">
       <Link>Data\CommandValueConverterBase.cs</Link>
     </Compile>
@@ -66,6 +72,9 @@
     </Compile>
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.35.WPF\Data\ValueConverterBase.Interface.cs">
       <Link>Data\ValueConverterBase.Interface.cs</Link>
+    </Compile>
+    <Compile Include="..\marceljoachimkloubert.clrtoolbox.35.wpf\extensions\ClrToolboxWpfExtensionMethods.cs">
+      <Link>Extensions\ClrToolboxWpfExtensionMethods.cs</Link>
     </Compile>
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.35.WPF\Input\SimpleCommand.cs">
       <Link>Input\SimpleCommand.cs</Link>
