--- a/MarcelJoachimKloubert.CLRToolbox.35.WPF/MarcelJoachimKloubert.CLRToolbox.35.WPF.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.35.WPF/MarcelJoachimKloubert.CLRToolbox.35.WPF.csproj
@@ -55,7 +55,9 @@
     <Compile Include="Data\Impl\CommandValueConverter.cs" />
     <Compile Include="Data\Impl\DelegateToCommandValueConverter.cs" />
     <Compile Include="Data\ValueConverterBase.cs" />
-    <Compile Include="Data\ValueConverterBase.Interface.cs" />
+    <Compile Include="Data\ValueConverterBase.Interface.cs">
+      <DependentUpon>ValueConverterBase.cs</DependentUpon>
+    </Compile>
     <Compile Include="Extensions\ClrToolboxWpfExtensionMethods.cs" />
     <Compile Include="Input\SimpleCommand.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
